2000-04-27  Jonathan Gapen  <jagapen@whitewater.chem.wisc.edu>

	* Headers/gnustep/gui/NSColorWell.h: Add ivar, prepend underscores.
	* Images/common_ColorSwatch.tiff: New file.
	* Images/GNUmakefile: Update.
	* Model/IMLoading.m: Bugfix in [+loadGModelNamed:owner:] to invoke
	[+bundleForClass:] with a class, not an object.
	* Panels/ColorPanel.gmodel: Add attributes to make a color panel
	become key only as needed, and make it a floating panel.
	* Source/NSColorPanel.m: Use above image for color dragging.
	* Source/NSColorWell.m: Updates for proper (de)activation.

2000-04-25  Adam Fedor  <fedor@gnu.org>

	* Source/NSScreen.m (-deviceDescription): Use autoreleased dictionary.
	(+mainScreen): Autorelease screen.
	(+screens): Likewise.
	(-isEqual:): Implement.

2000-04-25 Richard Frith-Macdonald <rfm@gnu.org>

	Patch by Gregory John Casamento <borgheron@yahoo.com> edited to
	conform to standards.  Adds improved colorspace support.
	Files modified - Headers/gnustep/gui/NSGraphics.h,
	Headers/gnustep/gui/NSScreen.h, Source/Functions.m, Source/NSScreen.m,
	Source/externs.m, Tools/Functions.m

2000-04-25  Adam Fedor  <fedor@gnu.org>

	* Source/NSView.m (-_updateBoundsMatrix): New method from
	common code in other methods.
	(-setFrame:): Use it. Also check if frame actually changed before
	doing something.
	(-scaleUnitSquareToSize): Use it.
	(-setBounds): Likewise.
	(-setBoundsSize:): Likewise.
	(-resizeWithOldSuperviewSize:) Likewise. Also use setFrame to actually
	set the frame (This is apparently what OpenStep 4.2 does).

2000-04-24  Adam Fedor  <fedor@gnu.org>

	* Source/NSFont.m (-isEqual:): Implement.
	(hash): Likewise.

	* Documentation/gsdoc/DPSOperators.gsdoc: New file.

2000-04-24  Fred Kiefer  <FredKiefer@gmx.de>

	* Parser/*: Updated the parser to support more of the RTF
	specification
	* NSAttributedString.m: Use new parser
	* NSText.m: Small improvements on formatting

2000-04-23  Fred Kiefer  <FredKiefer@gmx.de>
